# signal_processing

./: .gitignore  Cargo.toml  README.md  rustc-ice-2024-04-02T13_35_44-28876.txt
.github/workflows/: build-docs.yml  build-nightly-all-features.yml  build-nightly.yml  build-stable-all-features.yml  build-stable.yml  coverage.yml  lint.yml  test.yml
_signal_processing/src/analysis/: filternorm.rs  filtic.rs  filtic_u.rs  filtord.rs  find_peaks.rs  fwhm.rs  impulse_z.rs  islinphase.rs  ismaxphase.rs  isminphase.rs  isstable.rs  pburg.rs  phasez.rs  rceps.rs  real_cpsd.rs  real_freqz.rs  specgram.rs  step_z.rs
_signal_processing/src/decompositions/: residue.rs
_signal_processing/src/operations/: simplify.rs
_signal_processing/src/quantities/: owned_lists.rs  sum_sequence.rs
_signal_processing/src/systems/: ar.rs  ss.rs
_signal_processing/src/util/: chain.rs  two_sided_range.rs
_signal_processing/src/windows/: hann.rs  (+7 more)
bulks-math/: Cargo.toml
bulks-math/src/: lib.rs
bulks-polynomial/: Cargo.toml
bulks-polynomial/src/: lib.rs
ezplot/: Cargo.toml
ezplot/src/: lib.rs
signal_dft/src/: fft.rs
signal_fir_design/: Cargo.toml
signal_fir_design/src/: lib.rs
signal_fourier/: Cargo.toml
signal_fourier/src/: dft.rs  dft_inplace.rs  fft.rs  fourier_inplace.rs  lib.rs  permute.rs  scratch_space.rs
signal_fourier/src/util/: assign.rs  fft.rs  length_as_bulk.rs  mod.rs
signal_processing/: .gitignore  Cargo.toml
signal_processing-fourier/: Cargo.toml
signal_processing-fourier/src/: czt.rs  dct.rs  dct_2d.rs  dct_inplace.rs  dft.rs  dft_2d.rs  dft_inplace.rs  dht.rs  dst.rs  dst_2d.rs  dst_inplace.rs  dtft.rs  hilbert.rs  hilbert_2d.rs  idft.rs  lib.rs  permute.rs  scratch_space.rs
signal_processing-fourier/src/util/: assign.rs  fct_i.rs  fct_ii.rs  fct_iii.rs  fct_iv.rs  fft.rs  fst_i.rs  fst_ii.rs  fst_iii.rs  fst_iv.rs  indirect_reffable.rs  is_prime.rs  mod.rs  radix.rs  to_complex.rs
signal_processing-polynomial/: Cargo.toml
signal_processing-polynomial/src/: lib.rs
signal_processing-systems/: Cargo.toml
signal_processing-systems/src/: lib.rs
signal_processing-transforms/: Cargo.toml
signal_processing-transforms/src/: lib.rs
signal_processing-windows/: Cargo.toml
signal_processing-windows/src/: lib.rs  util.rs
signal_processing-windows/src/windows/: barthann.rs  blackman.rs  blackman_harris.rs  blackman_nuttall.rs  bohman.rs  boxcar.rs  confined_gaussian.rs  confined_normal.rs  dolph_chebyshev.rs  flat_top.rs  flattop.rs  gaussian.rs  hamming.rs  hann.rs  kaiser.rs  mod.rs  normal.rs  nuttall.rs  parzen.rs  planck_taper.rs  power_of_sine.rs  sine.rs  triangular.rs  tukey.rs  ultraspherical.rs  welch.rs
signal_processing/src/: lib.rs  plot.rs  rtf_or_system.rs  system.rs
signal_processing_windows/: Cargo.toml  README.md
signal_processing_windows/src/: lib.rs
signal_windows/: .gitignore  Cargo.toml  plots
signal_windows/src/: lib.rs  plot.rs
signal_windows/src/windows/: barthann.rs  blackman.rs  blackman_harris.rs  blackman_nuttall.rs  bohman.rs  confined_gaussian.rs  kaiser.rs  mod.rs  normal.rs
src/: lib.rs  maybe_rtf_or_system.rs  maybe_system.rs  plot.rs  rtf_or_system.rs  system.rs  validate_filter_bands.rs
src/analysis/: cceps.rs  cohere.rs  cpsd.rs  filternorm.rs  filtic.rs  filtic_u.rs  filtord.rs  find_freqs.rs  find_peaks.rs  findpeaks.rs  freqs.rs  freqz.rs  fwhm.rs  grpdelay.rs  impulse_s.rs  impulse_z.rs  impz.rs  isallpass.rs  islinphase.rs  ismaxphase.rs  isminphase.rs  isstable.rs  mod.rs  movingrms.rs  mscohere.rs  pburg.rs  peak_to_peak.rs  peak_to_rms.rs  phasez.rs  psd.rs  pwelch.rs  pyulear.rs  rceps.rs  real_cohere.rs  real_cpsd.rs  real_freqz.rs  real_mscohere.rs  real_phasez.rs  real_pwelch.rs  real_specgram.rs  (+13 more)
src/decompositions/: maxphase.rs  minphase.rs  mod.rs  residue.rs  residued.rs  residuez.rs  split_numer_denom.rs
src/error/: complex_real_error.rs  filter_band_error.rs  filter_gen_error.rs  mod.rs
src/generators/: mod.rs
src/identification/: invfreqs.rs  invfreqz.rs  mod.rs
src/operations/: cconv.rs  conv.rs  conv_2d.rs  decimate.rs  decode.rs  downsample.rs  encode.rs  fftfilt.rs  filter.rs  filter_mut.rs  filtfilt.rs  interp.rs  mod.rs  normalize.rs  qmf.rs  resample.rs  sgolayfilt.rs  simplify.rs  upsample.rs  upsample_fill.rs  window.rs
src/quantities/: container.rs  container_or_single.rs  into_list.rs  list.rs  list_or_single.rs  lists.rs  lists_or_single.rs  matrix.rs  matrix_or_single.rs  maybe_container.rs  maybe_list.rs  maybe_lists.rs  maybe_matrix.rs  maybe_owned_list.rs  maybe_owned_lists.rs  maybe_owned_matrix.rs  mod.rs  owned_list.rs  owned_list_or_single.rs  owned_lists.rs  owned_matrix.rs  polynomial.rs  product_sequence.rs  sum_sequence.rs
src/systems/: ar.rs  mod.rs  rpk.rs  rtf.rs  sos.rs  ss.rs  tf.rs  zpk.rs
src/transforms/: bilinear.rs  czt.rs  dct.rs  dct_2d.rs  dft.rs  dft2.rs  dft_2d.rs  dht.rs  dst.rs  dst_2d.rs  dwht.rs  dwt.rs  hilbert.rs  hilbert_transform.rs  iczt.rs  idct.rs  idft.rs  idft_2d.rs  idht.rs  idwht.rs  impinvar.rs  iwht.rs  mod.rs  sampled_to_continuous.rs  sdft.rs  sdft_kw.rs  sftrans.rs  sliding_dft.rs  swdft.rs  swift.rs  to_kw.rs  to_sos.rs  to_ss.rs  to_tf.rs  to_zpk.rs  zftrans.rs
src/util/: chain.rs  complex_op.rs  expm.rs  len_eq.rs  maybe_len_eq.rs  mod.rs  not_range.rs  overlay.rs  truncate_im.rs  two_sided_range.rs
src/window/: barthann.rs  blackman.rs  blackman_harris.rs  blackman_nuttall.rs  bohman.rs  boxcar.rs  confined_gaussian.rs  confined_normal.rs  dolph_chebyshev.rs  flattop.rs  gaussian.rs  hamming.rs  hann.rs  kaiser.rs  mod.rs  normal.rs  nuttall.rs  parzen.rs  planck_taper.rs  power_of_sine.rs  sine.rs  triangular.rs  tukey.rs  ultraspherical.rs  welch.rs
src/windows/: barthann.rs  blackman.rs  blackman_harris.rs  blackman_nuttall.rs  bohman.rs  boxcar.rs  confined_gaussian.rs  confined_normal.rs  dolph_chebyshev.rs  flattop.rs  gaussian.rs  hamming.rs  hann.rs  kaiser.rs  normal.rs  nuttall.rs  parzen.rs  planck_taper.rs  power_of_sine.rs  sine.rs  triangular.rs  tukey.rs  ultraspherical.rs  welch.rs
(+463 files in other folders)
