[workspace]
resolver = "3"
members = [
    "signal_processing-polynomial",
    #"signal_processing-systems",
    "signal_processing-fourier",
    "signal_processing-transforms",
    "signal_processing-windows",
    "ezplot",
]

[workspace.dependencies]
signal_processing-polynomial = { path = "signal_processing-polynomial" }
#signal_processing-systems = { path = "signal_processing-systems" }
signal_processing-transforms = { path = "signal_processing-transforms" }
signal_processing-fourier = { path = "signal_processing-fourier" }
signal_processing-windows = { path = "signal_processing-windows" }
ezplot = { path = "ezplot" }

moddef = "0.3.0"
currying = {version = "0.4.0", features = ["rcurry"]}
bulks = { version = "0.7.4", default-features = false, features = ["alloc"] }
array_trait = { version = "1.1.23", default-features = false, features = ["alloc", "length"] }
num-complex = { version = "0.4.6", default-features = false, features = ["std"] }
num-traits = { version = "0.2.19", default-features = false, features = ["std"] }

linspace = "0.3.0"
plotters = "0.3.7"
to_snake_case = "0.1.3"
image = "0.25.10"
ndarray = "0.17.2"