[package]
name = "signal_dft"
version = "0.1.0"
edition = "2024"

[features]
default = ["libm"]
libm = ["num-complex/libm", "num-traits/libm"]
std = ["alloc", "num-complex/std", "num-traits/std"]
alloc = ["bulks/alloc", "array_trait/alloc"]

[dependencies]
moddef = { workspace = true }
bulks = { workspace = true }
array_trait = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
linspace = { workspace = true }
plotters = { workspace = true }