[package]
name = "signal_processing-windows"
version = "0.1.0"
edition = "2024"

[features]

[dependencies]
moddef = { workspace = true }
bulks = { workspace = true }
array_trait = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
signal_processing-fourier = { workspace = true }

[dev-dependencies]
linspace = { workspace = true }
ezplot = { workspace = true }
to_snake_case = { workspace = true }